--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 
 [dev-packages]
+black = "*"
+flake8 = "*"
+isort = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.11"
